@startuml MasterLeaseState
title Figure — Host: hợp đồng thuê nhà gốc / master lease (InboundContract, trạng thái hiển thị của Host) State Diagram

skinparam shadowing false
skinparam ArrowFontSize 11
skinparam maxMessageSize 170
skinparam state {
  BackgroundColor #F8FAFC
  BorderColor #475569
  ArrowColor #334155
}
hide empty description

[*] --> ACTIVE : Ký hợp đồng đầu vào khi onboard nhà (inbound-contract, nhà DRAFT)\nHost tạo master lease (POST /host/master-leases)\n/ cột status lưu ContractStatus.ACTIVE

ACTIVE --> EXPIRING : Hiển thị: endDate ≤ hôm nay + 60 ngày (EXPIRING_DAYS)
EXPIRING --> EXPIRED : Hiển thị: endDate < hôm nay
ACTIVE --> EXPIRED : Hiển thị: endDate < hôm nay

ACTIVE --> TERMINATED : Host chấm dứt (POST /host/master-leases/{id}/terminate)\n/ cột status = ContractStatus.TERMINATED
EXPIRING --> TERMINATED : Host chấm dứt
EXPIRED --> TERMINATED : Host chấm dứt

TERMINATED --> [*]

note right of ACTIVE
  Chỉ TERMINATED được lưu trong DB. EXPIRING và EXPIRED được tính lại mỗi lần đọc
  (resolveMasterLeaseStatus) từ endDate — không có cron đổi status.
  Bộ lọc "EXPIRED / EXPIRING / ACTIVE" đều tra cột status = ACTIVE.
  Entity MasterLease + MasterLeaseController (@RestController đang bị comment)
  là đường code cũ, không có endpoint nào gọi tới.
end note

@enduml
